--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/gallery.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/gallery.phtml
@@ -3,94 +3,174 @@
 declare(strict_types=1);
 
 use Hyva\Theme\Model\ViewModelRegistry;
+use Hyva\Theme\ViewModel\StoreConfig;
+use Hyva\Theme\ViewModel\HeroiconsOutline;
 use Hyva\Theme\ViewModel\HeroiconsSolid;
 use Magento\Catalog\Block\Product\View\Gallery;
+use Magento\Catalog\Helper\Image;
 use Magento\Framework\Escaper;
-use Satoshi\Theme\Block\Template;
 
-/** @var Template $template */
 /** @var Escaper $escaper */
 /** @var Gallery $block */
 /** @var ViewModelRegistry $viewModels */
 
+/** @var StoreConfig $storeConfig */
+$storeConfig = $viewModels->require(StoreConfig::class);
+
+/** @var HeroiconsOutline $heroicons */
+$heroicons = $viewModels->require(HeroiconsOutline::class);
+
 /** @var HeroiconsSolid $heroiconsSolid */
 $heroiconsSolid = $viewModels->require(HeroiconsSolid::class);
 
-$productName = $block->getProduct()->getName();
-$images = json_decode($block->getGalleryImagesJson(), true);
-$firstImage = array_shift($images);
+$images = $block->getGalleryImages()->getItems();
+$mainImage = current(array_filter($images, [$block, 'isMainImage']));
+
+if (!empty($images) && empty($mainImage)) {
+    $mainImage = reset($images);
+}
+
+/** @var Image $helper */
+$helper = $block->getData('imageHelper');
+$mainImageUrl = $mainImage ?
+    $mainImage->getData('medium_image_url') :
+    $helper->getDefaultPlaceholderUrl('image');
+
+$galleryOptionVideoLoop = $storeConfig->getStoreConfig('catalog/product_video/video_auto_restart') ?? false;
 
 $isContain = false;
-
+$mixBackground = false;
+$productName = $block->getProduct()->getName();
 ?>
 
 <div
     id="gallery"
-    x-data='Gallery(<?= json_encode($block->getGalleryImagesJson()) ?>)'
+    x-data='Gallery(<?= json_encode($block->getGalleryImagesJson()) ?>, <?= !!($block->getVar('gallery_switch_strategy', 'Magento_ConfigurableProduct') === 'append') ?><?= !!($block->getVar('gallery_switch_strategy', 'Magento_ConfigurableProduct') === 'append') ?>, <?= !!$galleryOptionVideoLoop ?>)'
+    x-bind="eventListeners"
     class="flex w-full flex-col gap-4 md:grid md:grid-cols-[repeat(auto-fit,1fr)] md:gap-5 md:pb-7 lg:grid-cols-[repeat(auto-fit,minmax(300px,1fr))] max-md:-mt-8"
 >
-    <div
-        class="relative flex aspect-product flex-shrink-0 items-center justify-center overflow-hidden border-black bg-[--fade-in-bg] md:rounded-2xl max-md:hidden"
-    >
+    <!-- Main image with anti blinking -->
+    <div class="relative flex aspect-product flex-shrink-0 items-center justify-center overflow-hidden bg-[--fade-in-bg] md:rounded-2xl max-md:hidden">
         <div
             x-data="
-          TransitionImage({
-            src: '<?= $firstImage['img'] ?>',
-            imageId: 'firstImage'
-          })
-        "
+                TransitionImage({
+                    src: '<?= $mainImageUrl ?>',
+                    imageId: 'main-image-<?= $mainImage->getData('position') ?>'
+                })
+            "
             x-show="!!src"
-            class="<?= $isContain ? 'p-[4%] size-full' : 'size-full' ?> hide-unless-transition absolute inset-0 z-10 flex items-center justify-center bg-[--fade-in-bg] {% if is_contain %}p-[4%]{% endif %} transition-opacity delay-1000 duration-300"
+            class="<?= $isContain ? 'p-[4%]' : 'size-full' ?> hide-unless-transition absolute inset-0 z-10 flex items-center justify-center bg-[--fade-in-bg] transition-opacity delay-1000 duration-300"
             :class="{ 'opacity-0': isImgLoaded }"
         >
             <img
                 height="100%"
                 width="100%"
-                class="
-                <?= $isContain ? 'object-contain rounded-2xl max-h-full w-auto' : 'object-cover size-full' ?>
-                "
+                class="object-center <?= $isContain ? 'object-contain rounded-2xl max-h-full w-auto' : 'object-cover size-full' ?> <?= $mixBackground ? 'mix-blend-darken' : '' ?>"
                 :src="src"
+                alt="<?= $mainImage ? $escaper->escapeHtmlAttr($mainImage->getData('label')) : '' ?>"
             >
         </div>
-        <div class="
-                flex items-center justify-center
-                <?= $isContain ? 'p-[4%] size-full' : 'size-full' ?>
-              ">
-            <img
-                class="
-                object-center no-fade
-                <?= $isContain ? 'object-contain rounded-2xl max-h-full w-auto' : 'object-cover size-full' ?>
-              "
-                src="<?= $firstImage['img'] ?>"
-                alt=""
-                id="firstImage"
 
+        <div class="flex items-center justify-center size-full <?= $isContain ? 'p-[4%]' : '' ?>">
+            <img
+                class="object-center no-fade <?= $isContain ? 'object-contain rounded-2xl max-h-full w-auto' : 'object-cover size-full' ?>"
+                src="<?= $mainImageUrl ?>"
+                alt="<?= $mainImage ? $escaper->escapeHtmlAttr($mainImage->getData('label')) : '' ?>"
+                id="main-image-<?= $mainImage->getData('position') ?>"
             >
+            <?php if($mainImage->getData('media_type') && str_contains($mainImage->getData('media_type'), 'video')): ?>
+                <!-- Play button -->
+                <button
+                    type="button"
+                    class="group absolute inset-0 grid place-items-center"
+                    aria-label="<?= $escaper->escapeHtmlAttr(__('Play video')) ?>"
+                    @click="activateVideo(<?= $mainImage->getData('position') ?>)"
+                    @keydown.enter="activateVideo(<?= $mainImage->getData('position') ?>)"
+                    x-cloak
+                >
+                    <?= $heroiconsSolid->playHtml(
+                        'stroke-white/75 fill-black/20 transition ease-in group-hover:scale-110 md:w-24 md:h-24',
+                        44,
+                        44,
+                        ['aria-hidden' => 'true']
+                    ); ?>
+                </button>
+
+                <!-- Youtube container -->
+                <div class="absolute inset-0 hidden size-full bg-white"
+                    :class="{ 'hidden': activeVideoType !== 'youtube' }"
+                    x-transition.opacity.duration.500ms
+                    x-show="activeVideoType === 'youtube'"
+                >
+                    <div id="youtube-player-<?= $mainImage->getData('position') ?>" class="size-full"></div>
+                </div>
+
+                <!-- Video container -->
+                <div class="absolute inset-0 hidden size-full bg-white"
+                    :class="{ 'hidden': activeVideoType !== 'vimeo' }"
+                    x-transition.opacity.duration.500ms
+                    x-show="activeVideoType === 'vimeo'"
+                >
+                    <div id="vimeo-player-<?= $mainImage->getData('position') ?>" class="size-full"></div>
+                </div>
+            <?php endif; ?>
         </div>
-        <?=
-            $template
-                ->setData(['image' => $firstImage, 'index' => 0])
-                ->render('Magento_Catalog::product/view/video.phtml');
-        ?>
     </div>
 
-    <?php foreach ($images as $index => $image): ?>
-        <div
-            class="animate-on-transition relative aspect-product flex-shrink-0 overflow-hidden border-black md:rounded-2xl">
-            <div class="flex items-center justify-center size-full">
+    <!-- Other images -->
+    <template x-for="(image, index) in images.filter(img => img.position != <?= $mainImage->getData('position') ?>)" :key="index">
+        <div class="animate-on-transition relative aspect-product flex-shrink-0 overflow-hidden border-black md:rounded-2xl">
+            <div class="flex items-center justify-center size-full <?= $isContain ? 'p-[4%]' : '' ?>">
                 <img
-                    alt="<?= $escaper->escapeHtmlAttr($image['caption'] ?? $productName) ?>"
-                    title="<?= $escaper->escapeHtmlAttr($image['caption'] ?? $productName) ?>"
-                    class="object-cover size-full"
-                    loading="lazy"
-                    src="<?= $image['img'] ?>"
+                    :alt="image.caption || '<?= $escaper->escapeJs($productName) ?>'"
+                    :title="image.caption || '<?= $escaper->escapeJs($productName) ?>'"
+                    class="object-center <?= $isContain ? 'object-contain rounded-2xl max-h-full w-auto' : 'object-cover size-full' ?>"
+                    :src="image.img"
                 />
-                <?=
-                    $template
-                        ->setData(['image' => $image, 'index' => $index + 1])
-                        ->render('Magento_Catalog::product/view/video.phtml');
-                ?>
+
+                <!-- Play button -->
+                <button
+                    x-show="image.type === 'video'"
+                    type="button"
+                    class="group absolute inset-0 grid place-items-center"
+                    aria-label="<?= $escaper->escapeHtmlAttr(__('Play video')) ?>"
+                    @click="activateVideo(<?= $mainImage->getData('position') ?>)"
+                    @keydown.enter="activateVideo(<?= $mainImage->getData('position') ?>)"
+                    x-cloak
+                >
+                    <?= $heroiconsSolid->playHtml(
+                        'stroke-white/75 fill-black/20 transition ease-in group-hover:scale-110 md:w-24 md:h-24',
+                        44,
+                        44,
+                        ['aria-hidden' => 'true']
+                    ); ?>
+                </button>
+
+                <!-- Youtube container -->
+                <div class="absolute inset-0 hidden size-full bg-white"
+                    :class="{ 'hidden': activeVideoType !== 'youtube' }"
+                    x-transition.opacity.duration.500ms
+                    x-show="image.type === 'video' && activeVideoType === 'youtube'"
+                >
+                    <div :id="`youtube-player-${image.position}`" class="size-full"></div>
+                </div>
+
+                <!-- Video container -->
+                <div class="absolute inset-0 hidden size-full bg-white"
+                    :class="{ 'hidden': activeVideoType !== 'vimeo' }"
+                    x-transition.opacity.duration.500ms
+                    x-show="image.type === 'video' && activeVideoType === 'vimeo'"
+                >
+                    <div :id="`vimeo-player-${image.position}`" class="size-full"></div>
+                </div>
             </div>
         </div>
-    <?php endforeach; ?>
+    </template>
+
+    <?php if (count($images) > 2): // To eliminate images shifting when javascript loads ?>
+        <div :class="'hidden'"></div>
+        <div :class="'hidden'"></div>
+    <?php elseif (count($images) > 1): ?>
+        <div :class="'hidden'"></div>
+    <?php endif; ?>
 </div>
