--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/gallery.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/gallery.phtml
@@ -36,19 +36,13 @@ $mainImageUrl = $mainImage ?
     $mainImage->getData('medium_image_url') :
     $helper->getDefaultPlaceholderUrl('image');
 
-$galleryOptionVideoLoop = $storeConfig->getStoreConfig('catalog/product_video/video_auto_restart') ?? false;
 
 $isContain = false;
 $mixBackground = false;
 $productName = $block->getProduct()->getName();
 ?>
 
-<div
-    id="gallery"
-    x-data='Gallery(<?= json_encode($block->getGalleryImagesJson()) ?>, <?= !!($block->getVar('gallery_switch_strategy', 'Magento_ConfigurableProduct') === 'append') ?><?= !!($block->getVar('gallery_switch_strategy', 'Magento_ConfigurableProduct') === 'append') ?>, <?= !!$galleryOptionVideoLoop ?>)'
-    x-bind="eventListeners"
-    class="flex w-full flex-col gap-4 md:grid md:grid-cols-[repeat(auto-fit,1fr)] md:gap-5 md:pb-7 lg:grid-cols-[repeat(auto-fit,minmax(300px,1fr))] max-md:-mt-8"
->
+<div class="flex w-full flex-col gap-4 md:grid md:grid-cols-[repeat(auto-fit,1fr)] md:gap-5 md:pb-7 lg:grid-cols-[repeat(auto-fit,minmax(300px,1fr))] max-md:-mt-8">
     <!-- Main image with anti blinking -->
     <div class="relative flex aspect-product flex-shrink-0 items-center justify-center overflow-hidden bg-[--fade-in-bg] md:rounded-2xl max-md:hidden">
         <div
@@ -79,40 +73,44 @@ $productName = $block->getProduct()->getName();
                 id="main-image-<?= $mainImage->getData('position') ?>"
             >
             <?php if($mainImage->getData('media_type') && str_contains($mainImage->getData('media_type'), 'video')): ?>
-                <!-- Play button -->
-                <button
-                    type="button"
-                    class="group absolute inset-0 grid place-items-center"
-                    aria-label="<?= $escaper->escapeHtmlAttr(__('Play video')) ?>"
-                    @click="activateVideo(<?= $mainImage->getData('position') ?>)"
-                    @keydown.enter="activateVideo(<?= $mainImage->getData('position') ?>)"
-                    x-cloak
-                >
-                    <?= $heroiconsSolid->playHtml(
-                        'stroke-white/75 fill-black/20 transition ease-in group-hover:scale-110 md:w-24 md:h-24',
-                        44,
-                        44,
-                        ['aria-hidden' => 'true']
-                    ); ?>
-                </button>
+                <template x-if="!$store.main.isMobile">
+                    <div class="contents">
+                        <!-- Play button -->
+                        <button
+                            type="button"
+                            class="group absolute inset-0 grid place-items-center"
+                            aria-label="<?= $escaper->escapeHtmlAttr(__('Play video')) ?>"
+                            @click="activateVideo(<?= $mainImage->getData('position') ?>)"
+                            @keydown.enter="activateVideo(<?= $mainImage->getData('position') ?>)"
+                            x-cloak
+                        >
+                            <?= $heroiconsSolid->playHtml(
+                                'stroke-white/75 fill-black/20 transition ease-in group-hover:scale-110 md:w-24 md:h-24',
+                                44,
+                                44,
+                                ['aria-hidden' => 'true']
+                            ); ?>
+                        </button>
 
-                <!-- Youtube container -->
-                <div class="absolute inset-0 hidden size-full bg-white"
-                    :class="{ 'hidden': activeVideoType !== 'youtube' }"
-                    x-transition.opacity.duration.500ms
-                    x-show="activeVideoType === 'youtube'"
-                >
-                    <div id="youtube-player-<?= $mainImage->getData('position') ?>" class="size-full"></div>
-                </div>
+                        <!-- Youtube container -->
+                        <div class="absolute inset-0 hidden size-full bg-white"
+                            :class="{ 'hidden': activeVideoType !== 'youtube' }"
+                            x-transition.opacity.duration.500ms
+                            x-show="activeVideoType === 'youtube'"
+                        >
+                            <div id="youtube-player-<?= $mainImage->getData('position') ?>" class="size-full"></div>
+                        </div>
 
-                <!-- Video container -->
-                <div class="absolute inset-0 hidden size-full bg-white"
-                    :class="{ 'hidden': activeVideoType !== 'vimeo' }"
-                    x-transition.opacity.duration.500ms
-                    x-show="activeVideoType === 'vimeo'"
-                >
-                    <div id="vimeo-player-<?= $mainImage->getData('position') ?>" class="size-full"></div>
-                </div>
+                        <!-- Video container -->
+                        <div class="absolute inset-0 hidden size-full bg-white"
+                            :class="{ 'hidden': activeVideoType !== 'vimeo' }"
+                            x-transition.opacity.duration.500ms
+                            x-show="activeVideoType === 'vimeo'"
+                        >
+                            <div id="vimeo-player-<?= $mainImage->getData('position') ?>" class="size-full"></div>
+                        </div>
+                    </div>
+                </template>
             <?php endif; ?>
         </div>
     </div>
