--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
@@ -48,144 +48,150 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
   </div>
 </div>
 
-<!-- Options -->
-<template x-if="!$store.main.isMobile || <?= (int) in_array($productType, ['simple', 'virtual']) ?>">
-  <div class="animate-on-transition md:mb-5 max-md:hidden">
-    <?= $block->getChildHtml('product.info.form') ?>
-    <?= $block->getChildHtml('product_options_wrapper_bottom') ?>
-  </div>
-</template>
-
-<div class="flex flex-col sm:flex-row items-end mb-4">
-  <?php if ($product->isSaleable()): ?>
-    <div
-      class="relative flex flex-grow flex-wrap justify-stretch gap-3 w-full"
-      id="product-actions"
-      x-transition
-      x-intersect:enter="toggleStickyProductActions(false)"
-      x-intersect:leave="toggleStickyProductActions(true)"
-    >
-      <?= $block->getChildHtml('product.actions') ?>
-    </div>
-
-    <!-- StickyProductActionsPopup -->
-    <?php
-    $stickyActions = <<<HTML
-        <div class="h-9"></div>
-        <template x-portal="document.getElementById('popup-fixed-content-portal')">
-            <div
-                id="ProductBottomActionsPopup"
-                x-show="\$store.popup.currentPopup == 'product_bottom_actions'"
-                class="flex w-full items-center justify-end gap-3 bg-bg-500 px-3"
-            >
-                <div
-                    class="ml-3 flex flex-grow gap-3"
-                    x-show="!isVariantInCart"
-                    x-transition
-                >
-                    {$block->getChildHtml("product.info.price")}
-                </div>
-                <div
-                    class="flex flex-grow justify-stretch gap-3"
-                    :class="{
-                        'w-full': isVariantInCart
-                    }"
-                >
-                    {$block->getChildBlock('product.actions')->setData(['is_small' => true, 'is_popup' => false])->toHtml()}
-                </div>
-            </div>
-        </template>
-    HTML;
-    ?>
-
-    <?= $popup
-      ->setData(['id' => 'product_bottom_actions'])
-      ->setChildHtml($stickyActions)
-      ->render() ?>
-    <!-- StickyProductActionsPopup -->
-
-    <!-- Product actions popup -->
-    <?php
-    $popup_id = 'product_actions-' . $product->getId();
-    $options = $block->getChildBlock('product.info.form')->setData(['is_popup' => true])->toHtml();
-
-    $options .= $block->getChildHtml('product_options_wrapper_bottom');
-
-    $productActions = <<<HTML
-        <template x-if="\$store.main.isMobile">
-          <div class="contents">
-            <div class="max-md:mx-2" id="product-options">
-              {$options}
-            </div>
-
-            <div class="min-h-20 md:hidden"></div>
-              <template x-portal="document.getElementById('popup-fixed-content-portal')">
-                <div x-show="\$store.popup.currentPopup === productActionsPopup">
-                  <div class="bg-bg-500 relative z-10">
-                    {$block->getChildBlock('product.actions')->setData(['is_popup' => true, 'is_small' => false])->toHtml()}
-                  </div>
-                </div>
-              </template>
-            </div>
+<div class="flex flex-col-reverse md:flex-col">
+  <div>
+    <!-- Short Description -->
+    <?php if ($shortDescription = $productViewModel->getShortDescription()): ?>
+      <div class="mb-4"><?= $shortDescription ?></div>
+    <?php endif; ?>
+    
+    <!-- Attributes table -->
+    <dl class="mb-8">
+      <?php foreach ($block->getAttributes() as $attributeConfig):
+        $attribute = $attributesViewModel->getAttributeFromLayoutConfig($attributeConfig); ?>
+        <?php if ($value = $attribute['value'] ?? null): ?>
+          <div class="flex border-t first:border-t-0 border-gray-300 py-2 last:border-b">
+            <dt class="w-1/2"><?= $escaper->escapeHtml($attribute['label']) ?></dt>
+            <dd class="w-1/2 ml-2"><?= $escaper->escapeHtml($value) ?></dd>
           </div>
-        </template>
-    HTML;
-    ?>
-    <?= $popup
-      ->setData([
-        'id' => $popup_id,
-        'isFocused' => true
-      ])
-      ->setChildHtml($productActions)
-      ->render() ?>
-    <!-- Product actions popup -->
-  <?php endif; ?>
-</div>
-
-<!-- TODO: What is this? -->
-<?php if ($product->isSaleable()): ?>
-  <div class="flex mt-4 justify-end">
-    <?= $block->getChildHtml('addtocart.shortcut.buttons') ?>
+        <?php endif ?>
+      <?php endforeach; ?>
+    </dl>
   </div>
-<?php endif; ?>
-
-<div class="flex mt-4 justify-end">
-  <?php
-    // TODO: Implement add to wishtlist / add to compare
-    // echo $block->getChildHtml('product.info.addtowishlist');
-    // echo $block->getChildHtml('product.info.addtocompare');
-  ?>
-<!-- TODO: What is this? -->
-  <?= $block->getChildHtml('product.info.emailtofriend') ?>
-<!-- TODO: What is this? -->
-  <?= $block->getChildHtml('product.info.additional.actions') ?>
-</div>
-
-<!-- TODO: What is this? -->
-<?php if ($tierPriceBlock = $block->getChildHtml("product.price.tier")): ?>
-  <div class="py-4 my-2 tier-price-container">
-    <?= /** @noEscape */
-    $tierPriceBlock ?>
-  </div>
-<?php endif; ?>
-
-<!-- TODO: What is this? -->
-<?= $block->getChildHtml("product.info.additional") ?>
-
-<!-- Short Description -->
-<?php if ($shortDescription = $productViewModel->getShortDescription()): ?>
-  <div class="mb-4"><?= $shortDescription ?></div>
-<?php endif; ?>
-
-<!-- Attributes table -->
-<dl class="mb-8">
-  <?php foreach ($block->getAttributes() as $attributeConfig):
-    $attribute = $attributesViewModel->getAttributeFromLayoutConfig($attributeConfig); ?>
-    <?php if ($value = $attribute['value'] ?? null): ?>
-      <div class="flex border-t first:border-t-0 border-gray-300 py-2 last:border-b">
-        <dt class="w-1/2"><?= $escaper->escapeHtml($attribute['label']) ?></dt>
-        <dd class="w-1/2 ml-2"><?= $escaper->escapeHtml($value) ?></dd>
+  
+  <div>
+    <!-- Options -->
+    <template x-if="!$store.main.isMobile || <?= (int) in_array($productType, ['simple', 'virtual']) ?>">
+      <div class="animate-on-transition md:mb-5 max-md:hidden">
+        <?= $block->getChildHtml('product.info.form') ?>
+        <?= $block->getChildHtml('product_options_wrapper_bottom') ?>
       </div>
-    <?php endif ?>
-  <?php endforeach; ?>
-</dl>
+    </template>
+    
+    <div class="flex flex-col sm:flex-row items-end mb-4">
+      <?php if ($product->isSaleable()): ?>
+        <div
+          class="relative flex flex-grow flex-wrap justify-stretch gap-3 w-full"
+          id="product-actions"
+          x-transition
+          x-intersect:enter="toggleStickyProductActions(false)"
+          x-intersect:leave="toggleStickyProductActions(true)"
+        >
+          <?= $block->getChildHtml('product.actions') ?>
+        </div>
+    
+        <!-- StickyProductActionsPopup -->
+        <?php
+        $stickyActions = <<<HTML
+            <div class="h-9"></div>
+            <template x-portal="document.getElementById('popup-fixed-content-portal')">
+                <div
+                    id="ProductBottomActionsPopup"
+                    x-show="\$store.popup.currentPopup == 'product_bottom_actions'"
+                    class="flex w-full items-center justify-end gap-3 bg-bg-500 px-3"
+                >
+                    <div
+                        class="ml-3 flex flex-grow gap-3"
+                        x-show="!isVariantInCart"
+                        x-transition
+                    >
+                        {$block->getChildHtml("product.info.price")}
+                    </div>
+                    <div
+                        class="flex flex-grow justify-stretch gap-3"
+                        :class="{
+                            'w-full': isVariantInCart
+                        }"
+                    >
+                        {$block->getChildBlock('product.actions')->setData(['is_small' => true, 'is_popup' => false])->toHtml()}
+                    </div>
+                </div>
+            </template>
+        HTML;
+        ?>
+    
+        <?= $popup
+          ->setData(['id' => 'product_bottom_actions'])
+          ->setChildHtml($stickyActions)
+          ->render() ?>
+        <!-- StickyProductActionsPopup -->
+    
+        <!-- Product actions popup -->
+        <?php
+        $popup_id = 'product_actions-' . $product->getId();
+        $options = $block->getChildBlock('product.info.form')->setData(['is_popup' => true])->toHtml();
+    
+        $options .= $block->getChildHtml('product_options_wrapper_bottom');
+    
+        $productActions = <<<HTML
+            <template x-if="\$store.main.isMobile">
+              <div class="contents">
+                <div class="max-md:mx-2" id="product-options">
+                  {$options}
+                </div>
+    
+                <div class="min-h-20 md:hidden"></div>
+                  <template x-portal="document.getElementById('popup-fixed-content-portal')">
+                    <div x-show="\$store.popup.currentPopup === productActionsPopup">
+                      <div class="bg-bg-500 relative z-10">
+                        {$block->getChildBlock('product.actions')->setData(['is_popup' => true, 'is_small' => false])->toHtml()}
+                      </div>
+                    </div>
+                  </template>
+                </div>
+              </div>
+            </template>
+        HTML;
+        ?>
+        <?= $popup
+          ->setData([
+            'id' => $popup_id,
+            'isFocused' => true
+          ])
+          ->setChildHtml($productActions)
+          ->render() ?>
+        <!-- Product actions popup -->
+      <?php endif; ?>
+    </div>
+    
+    <!-- TODO: What is this? -->
+    <?php if ($product->isSaleable()): ?>
+      <div class="flex mt-4 justify-end">
+        <?= $block->getChildHtml('addtocart.shortcut.buttons') ?>
+      </div>
+    <?php endif; ?>
+    
+    <div class="flex mt-4 justify-end">
+      <?php
+        // TODO: Implement add to wishtlist / add to compare
+        // echo $block->getChildHtml('product.info.addtowishlist');
+        // echo $block->getChildHtml('product.info.addtocompare');
+      ?>
+    <!-- TODO: What is this? -->
+      <?= $block->getChildHtml('product.info.emailtofriend') ?>
+    <!-- TODO: What is this? -->
+      <?= $block->getChildHtml('product.info.additional.actions') ?>
+    </div>
+    
+    <!-- TODO: What is this? -->
+    <?php if ($tierPriceBlock = $block->getChildHtml("product.price.tier")): ?>
+      <div class="py-4 my-2 tier-price-container">
+        <?= /** @noEscape */
+        $tierPriceBlock ?>
+      </div>
+    <?php endif; ?>
+    
+    <!-- TODO: What is this? -->
+    <?= $block->getChildHtml("product.info.additional") ?>
+  </div>
+</div>
