Fix product gallery when no image exists

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/gallery.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/gallery.phtml
@@ -49,7 +49,7 @@ $productName = $block->getProduct()->getName();
             x-data="
                 TransitionImage({
                     src: '<?= $mainImageUrl ?>',
-                    imageId: 'main-image-<?= $mainImage->getData('position') ?>'
+                    imageId: <?= $mainImage ? 'main-image-' . $mainImage->getData('position') : 'main-image' ?>'
                 })
             "
             x-show="!!src"
