Fix initializing gallery

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
@@ -48,7 +48,7 @@ if ($product) {
 
 <div
     class="md:content-wrapper relative z-30 mx-auto flex w-full flex-col justify-center gap-4 md:grid md:grid-cols-[1fr_250px] md:items-start md:gap-8 lg:grid-cols-[1fr_330px] xl:grid-cols-[1fr_400px] xl:gap-16"
-    x-data='Gallery(<?= json_encode($block->getGalleryImagesJson()) ?>, <?= !!($block->getVar('gallery_switch_strategy', 'Magento_ConfigurableProduct') === 'append') ?><?= !!($block->getVar('gallery_switch_strategy', 'Magento_ConfigurableProduct') === 'append') ?>, <?= !!$galleryOptionVideoLoop ?>)'
+    x-data='Gallery(<?= json_encode($block->getGalleryImagesJson()) ?>, <?= (int) !!($block->getVar('gallery_switch_strategy', 'Magento_ConfigurableProduct') === 'append') ?>, <?= (int) !!$galleryOptionVideoLoop ?>)'
     x-bind="eventListeners"
 >
     <!-- Desktop gallery -->
