--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/layout/customer_account_create.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/layout/customer_account_create.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <head>
-        <title>Create Account</title>
-    </head>
     <body>
         <referenceBlock name="page.main.title" remove="true" />
+        <referenceContainer name="customer.login.container" htmlClass="container mx-auto flex h-full items-center px-5" />
 
         <referenceBlock name="breadcrumbs">
             <action method="addCrumb">
