INTERNAL-56: Enhance login frontend

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/layout/customer_account_login.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/layout/customer_account_login.xml
@@ -3,7 +3,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="page.main.title" remove="true" />
-
+        <referenceContainer name="customer.login.container" htmlClass="container mx-auto flex h-full items-center px-5" />
         <referenceBlock name="breadcrumbs" template="Magento_Theme::html/breadcrumbs.phtml">
             <action method="addCrumb">
                 <argument name="crumbName" xsi:type="string">home</argument>
@@ -22,5 +22,6 @@
                 </argument>
             </action>
         </referenceBlock>
+        <referenceBlock name="customer.new" remove="true" />
     </body>
 </page>
