--- a/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/order/history.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/order/history.phtml
@@ -46,11 +46,11 @@ if ($extraActionTitleBlocks = $block->getLayout()->getChildBlocks('order-list-ex
                 class="grid gap-4 grid-cols-1 md:grid-cols-6"
             >
                 <div class="p-2 flex md:block justify-between">
-                    <div class="font-bold text-sm"><?= $escaper->escapeHtml(__('Order #')) ?></div>
+                    <div class="font-bold"><?= $escaper->escapeHtml(__('Order #')) ?></div>
                     <div><?= $escaper->escapeHtml($order->getRealOrderId()) ?></div>
                 </div>
                 <div class="p-2 flex md:block justify-between">
-                    <div class="font-bold text-sm"><?= $escaper->escapeHtml(__('Date')) ?></div>
+                    <div class="font-bold"><?= $escaper->escapeHtml(__('Date')) ?></div>
                     <time class="mt-1" datetime="<?= $escaper->escapeHtmlAttr($block->formatDate($date, $format)); ?>">
                         <span aria-hidden="true"><?= $escaper->escapeHtml($block->formatDate($date, $format)); ?></span>
                         <span
@@ -59,29 +59,29 @@ if ($extraActionTitleBlocks = $block->getLayout()->getChildBlocks('order-list-ex
                 </div>
                 <?= $block->getChildHtml('extra.column.header') ?>
                 <div class="p-2 flex md:block justify-between">
-                    <div class="font-bold text-sm"><?= $escaper->escapeHtml(__('Ship To')) ?></div>
+                    <div class="font-bold"><?= $escaper->escapeHtml(__('Ship To')) ?></div>
                     <div class="md:mt-1">
                         <?= $order->getShippingAddress() ? $escaper->escapeHtml($order->getShippingAddress()->getName()) : '&nbsp;' ?>
                     </div>
                 </div>
                 <div class="p-2 flex md:block justify-between">
-                    <div class="font-bold text-sm"><?= $escaper->escapeHtml(__('Order Total')) ?></div>
+                    <div class="font-bold"><?= $escaper->escapeHtml(__('Order Total')) ?></div>
                     <div class="md:mt-1">
                         <?= $order->formatPrice($order->getGrandTotal()) ?>
                     </div>
                 </div>
                 <div class="p-2 flex md:block justify-between">
-                    <div class="font-bold text-sm"><?= $escaper->escapeHtml(__('Status')) ?></div>
+                    <div class="font-bold"><?= $escaper->escapeHtml(__('Status')) ?></div>
                     <div class="md:mt-1">
                         <?= $escaper->escapeHtml($order->getStatusLabel()) ?>
                     </div>
                 </div>
                 <div class="p-2 md:text-right flex md:block justify-between">
-                    <div class="font-bold text-sm"><?= $escaper->escapeHtml(__('View / Reorder')) ?></div>
+                    <div class="font-bold"><?= $escaper->escapeHtml(__('View / Reorder')) ?></div>
                     <div class="flex items-center justify-end gap-4 md:mt-1">
                         <a
                             href="<?= $escaper->escapeUrl($block->getViewUrl($order)) ?>"
-                            class="inline-block text-sm underline text-secondary-darker"
+                            class="inline-block underline text-secondary-darker"
                             title="<?= $escaper->escapeHtmlAttr(__('View Order')) ?>"
                             aria-label="<?= $escaper->escapeHtmlAttr(__('View order') . ' ' . ltrim($order->getRealOrderId(), '0')) ?>"
                         >
